# rad-se

./: .gitignore  CHANGELOG.md  CUDA_STACK_GUIDE.md  README.md  REPRODUCE.md  SPEEDUP_ANALYSIS.md  iteration_log.md  pyproject.toml
docs/: DISTRIBUTED_CPU_ACTORS.md  GPU_CONFIG.md  HANDOFF_24GB.md  ITERATION_LOG.md  LESSONS.md  PLAN.md  REFERENCES.md  RISKS.md  SISA_NOTES.md  SPEEDUP_ANALYSIS.md  compare.md
scripts/: diagnose_brax_env.py  remote_status.sh  run_brax_ppo.sh  run_brax_sac.sh  run_brax_sac_3090.sh  run_brax_sac_framestack_ablation.sh  run_brax_sac_framestack_entropy_ablation.sh  run_brax_sac_mem_ablation.sh  run_brax_sac_radcrop_ablation.sh  run_brax_sac_radcrop_update8_batch32_ablation.sh  run_brax_sac_radcrop_update8_batch32_host100k_f16_ablation.sh  run_brax_sac_radcrop_update8_batch32_host100k_f16_radfreq_ablation.sh  run_brax_sac_radcrop_update8_batch32_host100k_f16_radfreq_enctau_ablation.sh  run_brax_sac_radcrop_update8_batch32_host100k_f16_radfreq_tied_ablation.sh  run_brax_sac_radcrop_update8_batch32_host100k_uint8_radfreq_ablation.sh  run_brax_sac_radcrop_update8_batch32_replay10k_f16_ablation.sh  run_brax_sac_radcrop_update8_batch32_replay12500_f16_ablation.sh  run_brax_sac_radcrop_update8_batch32_replay12500_f16_scan25_ablation.sh  run_brax_sac_radcrop_update8_batch32_replay7500_f32_ablation.sh  run_brax_sac_radencoder_entropy_ablation.sh  run_brax_sac_radencoder_tied_ablation.sh  run_brax_sac_radencoder_update8_ablation.sh  run_k_sweep.sh  run_m1_local.sh  run_ppo_m1.sh  run_rad_jax.sh  run_rad_jax_ablation_stable.sh  run_rad_jax_exact.sh  (+5 more)
(+6 files in other folders)
